--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     <title>Document</title>
 </head>
 <body>
     <header>
-
+        <a href="" class="logo"></a>
     </header>
 
     <footer>
