--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>AirBnB clone</title>
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/100-places.css">
+    <link rel="stylesheet" type="text/css" href="./styles/4-common.css">
+    <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
+    <link rel="stylesheet" type="text/css" href="./styles/6-filters.css">
+    <link rel="stylesheet" type="text/css" href="./styles/100-places.css">
+    
     <link rel="icon" href="images/icon.png">
   </head>
   <body>
@@ -156,7 +157,8 @@
       </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
+Footer
