--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" type="text/css" href="./styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="./styles/3-footer.css">
     <link rel="stylesheet" type="text/css" href="./styles/6-filters.css">
-    <link rel="stylesheet" type="text/css" href="./styles/7-places.css">
-    <link rel="stylesheet" type="text/css" href="./styles/8-places.css">
     <link rel="stylesheet" type="text/css" href="./styles/101-places.css">
 
     <link rel="icon" href="images/icon.png">
@@ -159,7 +157,7 @@
       </section>
     </div>
     <footer>
-      <p>Holberton School</p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
